refactor: fix stuff with sonarlint